# WiFiDigit

./: README.md
.github/workflows/: release.yml
WiFiDigit/: LEDMatrixDigit.h  WiFiDigit.ino  arduino_secrets.h  number_fonts.h
keepipe/: Cargo.toml  README.md  keepipe.toml
keepipe/src/: config.rs  forecast.rs  lib.rs  main.rs  wifidigit.rs
