[package]
name = "keepipe"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.7"
reqwest = { version = "0.11", features = ["blocking", "json"] }
clap = { version = "4.4", features = ["derive"] }
log = "0.4"
env_logger = "0.10"

[profile.release]
strip = true

[target.'cfg(target_env = "musl")'.dependencies]
openssl = { version = "*", features = ["vendored"] }
